libsql-server/src/namespace/snapshots/libsql_server__namespace__meta_store__test__pending_job.snap
---
source: libsql-server/src/namespace/meta_store.rs
expression: meta_store.get_next_pending_job().await.unwrap().unwrap()
---
MigrationJob {
    schema: schema1,
    status: WaitingDryRun,
    job_id: 1,
    migration: Program {
        steps: [
            Step {
                cond: None,
                query: Query {
                    stmt: Statement {
                        stmt: "create table test (x)",
                        kind: DDL,
                        is_iud: false,
                        is_insert: false,
                        attach_info: None,
                    },
                    params: Positional(
                        [],
                    ),
                    want_rows: true,
                },
            },
        ],
    },
    progress: [
        3,
        0,
        0,
        0,
        0,
        0,
    ],
}
